--- a/_config.yml
+++ b/_config.yml
@@ -4,38 +4,44 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub  user page (http://username.github.io) then use these settings:
-url: "http://LucaZampieri.github.io"
+url: "http://StaySafeGeneva.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-#url: "http://LucaZampieri.github.io/StaySafe"
+#url: "http://StaySafeGeneva.github.io/projectname"
 #baseurl: "/StaySafe"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Luca Zampieri
+title: Stay Safe Geneva
 
 # Short description of your site
-description: I like colors. Like a lot.
+description: Website for the Project of Applied Data Analysis of EPFL, year 2017.
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  ADA Project: "StaySafe"
-  Resources:
-    - The correspong github file: "https://github.com/LucaZampieri/LucaZampieri.github.io/"
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-    - Authors page: "http://deanattali.com"
-  Home:  "https://LucaZampieri.github.io/"
+#  Tests:
+#    - Test leaflet: "test_leaflet"
+#    - Test Bokeh: "plotting"
+#    - lala: "lala"
+#    - raw Map: "maps/map1"
+#    - Embedded map: "maps/map_test"
+  Getting started: "pages/Gilcompa"
+  A visual story:   "pages/Milani"
+  Risk Applications:
+    - Risk Calculator: "pages/risk_calculator"
+    - Safety Maps: "pages/safety_map"
+  About:
+    - Team and project: "pages/about"
+    - References: "pages/appendix"
+#  Home:  "https://StaySafeGeneva.github.io/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/SwissRedCross.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -58,56 +64,24 @@ avatar: "/img/avatar-icon.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Luca Zampieri
-  email: "youremail@domain.com"
-  facebook: Luca Zampieri  # eg. daattali
+  name: LucaZampieri & Gilcompa & MartMilani
   github: LucaZampieri    # eg. daattali
-  twitter: lalala   # eg. daattali
-  reddit: yourname    # eg. daattali
-  google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: yourname  # eg. daattali
-  xing: yourname      # eg. daattali
-  stackoverflow: yourlink  # eg. "3943160/daattali"
-  snapchat: yourname  # eg. daattali
-  instagram: yourname # eg. daattali
-  youtube: yourlink   # eg. user/daattali or channel/daattali
-  spotify: yourname   # eg. daattali
-  telephone: yourphone   # eg. +14159998888
-  steam: yourname     # eg. daattali
-  twitch: yourname    # eg. daattali
-  yelp: yourname      # eg. daattali
+  linkedin: Luca Zampieri  # eg. daattali
 
 # Select which links to show in the footer
 footer-links-active:
-  rss: false
-  facebook: true
   email: true
-  twitter: true
-  google-plus: false
   github: true
-  reddit: false
   linkedin: false
-  xing: false
-  stackoverflow: false
-  snapchat: false
-  instagram: false
-  youtube: false
-  spotify: false
-  telephone: false
-  steam: false
-  twitch: false
-  yelp: false
+
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  google: false
   linkedin: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "2.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "www.epfl.ch"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
@@ -172,6 +146,17 @@ exclude:
   - LICENSE
   - README.md
   - Vagrantfile
+
+
+
+
+
+
+
+
+
+
+
 
 # prose.io config
 prose:
