--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,14 @@ navbar-links:
 #    - raw Map: "maps/map1"
 #    - Embedded map: "maps/map_test"
   CV: "img/CV Luca (09_2018).pdf"
-  Blog:   "pages/Blog"
+  Travels:   "pages/travels"
   Projects:
-    - StaySafeGeneva: "pages/StaySafeGenevaProject"
-    - Road Segmentation:
-    - POD HiMod:
-    - ECG brain classification:
+    - Overview: "pages/Project_overview"
+    - StaySafeGeneva: "http://StaySafeGeneva.github.io/"
+    - Road Segmentation: "https://github.com/LucaZampieri/LMO_ML"
+    - ECG brain classification: "https://github.com/LucaZampieri/DeepLove"
+    - Convex optimization: "https://github.com/LucaZampieri/Convex_opti2018"
+    - POD HiMod (private for the moment): "https://github.com/LucaZampieri/podHimod"
   About: "pages/about"
 #  About:
 #    - Team and project: "pages/about"
