--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,10 @@ navbar-links:
   Projects:
     - Overview: "pages/Project_overview"
     - StaySafeGeneva: "http://StaySafeGeneva.github.io/"
+    - GetInVolvo - StartHack 2018: "https://github.com/TheSaintsOfGallen/GetInVolvo"
     - Road Segmentation: "https://github.com/LucaZampieri/LMO_ML"
-    - ECG brain classification: "https://github.com/LucaZampieri/DeepLove"
+    - Darcy Flow: "https://github.com/LucaZampieri/Darcy_Flow"
+    - EEG brain signal classification: "https://github.com/LucaZampieri/DeepLove"
     - Convex optimization: "https://github.com/LucaZampieri/Convex_opti2018"
     - POD HiMod (private for the moment): "https://github.com/LucaZampieri/podHimod"
   About: "pages/about"
