--- a/_config.yml
+++ b/_config.yml
@@ -55,11 +55,11 @@ avatar: "/img/ice1.jpg"
 # By default, the navigation bar and footer have a light gray background, and the main page
 # has a white background. You can specify a different background colour or a background image
 # for the navigation bar, the main page, and the footer.
-# navbar-col: "orange"
-# navbar-img: "/img/bgimage.png"
-# footer-col: "blue"
+navbar-col: "AliceBlue"
+#navbar-img: "/img/ice1.jpg"
+footer-col: "AliceBlue" #"blue"
 # footer-img: "/img/bgimage.png"
-# page-col: "#FF0000"
+#page-col: "AliceBlue" #"#FF0000"
 # page-img: "/img/bgimage.png"
 
 # --- Footer options --- #
@@ -68,8 +68,8 @@ avatar: "/img/ice1.jpg"
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: LucaZampieri
-  github: LucaZampieri    # eg. daattali
-  linkedin: Luca Zampieri  # eg. daattali
+  github: LucaZampieri
+  linkedin: Luca Zampieri
 
 # Select which links to show in the footer
 footer-links-active:
@@ -110,7 +110,7 @@ title-separator: "-"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "Europe/Rome"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
