--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ navbar-links:
   More:
     - About: "pages/about"
     - Test: "pages/test"
+    - Thesis: "pages/Thesis"
 #  About:
 #    - Team and project: "pages/about"
 #    - References: "pages/appendix"
