--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ navbar-links:
     - EEG brain signal classification: "https://github.com/LucaZampieri/DeepLove"
     - Convex optimization: "https://github.com/LucaZampieri/Convex_opti2018"
     - POD HiMod (private for the moment): "https://github.com/LucaZampieri/podHimod"
+    - Geometric Deep Learning for CFD: "pages/Thesis"
+    - Master Thesis: "pages/MasterThesis"
   More:
     - About: "pages/about"
     - Test: "pages/test"
