--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ navbar-links:
   More:
     - About: "pages/about"
     - Test: "pages/test"
+    - Test tfjs: "pages/tfjs"
     # - Thesis: "pages/" # Thesis"
 #  About:
 #    - Team and project: "pages/about"
